* Fix: overflow issue in a welcome message;

--- a/src/styles/public/base.css
+++ b/src/styles/public/base.css
@@ -6,6 +6,7 @@
     max-width: 340px;
     max-height: 80vh;
     position: fixed;
+    z-index: 999;
     background-color: var(--wwp--color--background);
     color: var(--wwp--color--text);
     border: 1px solid;
